# NonLinear_System_Solver

./: CMakeLists.txt  README.md  main.cpp
doc/: Doxyfile
src/: BisectionMethod.cpp  BisectionMethod.h  ChordsMethod.cpp  ChordsMethod.h  CosFunction.cpp  CosFunction.h  Exceptions.h  ExpFunction.cpp  ExpFunction.h  FixedPoint.cpp  FixedPoint.h  Function.cpp  Function.h  Function2D.cpp  Function2D.h  IterativeMethod.cpp  IterativeMethod.h  LogFunction.cpp  LogFunction.h  NewtonMethod.cpp  NewtonMethod.h  NonLinearEquation.cpp  NonLinearEquation.h  NonLinearSolver.h  NonLinearSystem.cpp  NonLinearSystem.h  SinFunction.cpp  SinFunction.h
test/: Bisection_test.cpp  Chords_test.cpp  FixedPoint_test.cpp  Function_test.cpp  Function_to_test.h  Newton_test.cpp
